data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_477.wast
;; 8. **Test Description**: Craft a `loop` where the control is dynamically altered within the loop body, potentially modifying the loop condition improperly and causing an infinite loop.    **Constraint**: Checking dynamic control modifications within loops.    **Infinite Loop Relevance**: Prevents changes in control flow from causing non-terminating loops.

(assert_invalid
  (module (func $dynamic-control-loop
    (loop (br_if 0 (i32.eqz (global.get 0))))
    (global.set 0 (i32.const 1))
  ))
  "infinite loop"
)